--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="container">
         <h1> لعبة الصور المتشابهة </h1>
         <p class="instructions">
-            Welcome to the Meme Matching Game!  Flip over two cards at a time and try to find all the matching pairs. Be quick and remember where you saw the cards!
+            مرحبا .. انا عبد الرحمن ودا مشروع بسيط وهي لعبة الصور المتشابهة 
         </p>
-        <button id="start-game">Start Game</button>
+        <button id="start-game"> جاهز تلعب اضغط هنا </button>
         <div id="game-board" class="game-board">
             <!-- Cards will be generated here -->
         </div>
